--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,7 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = csrf_meta_tags
 
-    %script{type: 'text/javascript', src: '//maps.googleapis.com/maps/api/js?library=geometry&sensor=false', 'data-turbolinks-track' => true}
+    %script{type: 'text/javascript', src: '//maps.googleapis.com/maps/api/js?library=geometry', 'data-turbolinks-track' => true}
 
     %meta{property: 'og:title', content: page_title(yield(:title))}
     %meta{property: 'og:url', content: request.original_url}
