--- a/app/views/virtual_competitions/index.html.haml
+++ b/app/views/virtual_competitions/index.html.haml
@@ -2,6 +2,11 @@
   .page-header
     %h1= 'Online competitions'
 
+  - if can? :create, VirtualCompetition
+    %a.btn.btn-default.btn-info{href: new_virtual_competition_path}
+      %i.fa.fa-plus
+      = 'Онлайн соревнование'
+ 
   %table#places-index.table.table-hover
     %thead
       %tr
