--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -35,6 +35,8 @@
                   = message
 
       = yield
+      -# Modal for Backbone Views
+      .modal.fade#modal{tabindex: '-1', role: 'dialog', aria: {labelledby: 'myModalLabel', hidden: 'true'}}
 
     = render 'errors/ajax_error_message'
     = render 'layouts/footer'
