Added basic wind cancellation feature

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -40,7 +40,7 @@ a, button, label, span {
   height: auto !important;
   height: 100%;
   margin: 0 auto -61px;
-  padding: 0 0 100px;
+  padding: 0 0 60px;
 }
 
 label.valid {
@@ -54,7 +54,7 @@ label.valid {
 
 a.dropdown-toggle.profile-dropdown {
   padding-bottom: 9px;
-  padding-top: 9px
+  padding-top: 9px;
 }
 
 .top-buffer { margin-top: 20px }
