--- a/app/views/tracks/_header.html.haml
+++ b/app/views/tracks/_header.html.haml
@@ -43,7 +43,7 @@
                            :'data-no-turbolink' => 'true'}
           %i.fa.fa-compass
           = 'Google earth'
-      %a.btn.btn-default{href: google_maps_track_path(track),
+      %a.btn.btn-default{href: track_google_maps_path(track),
                          class: ('active' if action_name == 'google_maps')}
         %i.fa.fa-compass
         = 'Google maps'
@@ -52,26 +52,29 @@
           %i.fa.fa-th-list
           = t('tracks.show.results')
       .pull-right
-        - if action_name == 'show'
-          %button.btn.btn-default.dropdown-toggle#dropdownMenu1{type: 'button', data: {toggle: 'dropdown'}}
-            %i.fa.fa-cog
-          %ul.dropdown-menu.dropdown-menu-right{role: 'menu', aria: {labelledby: 'dropdownMenu1'}}
-            %li.dropdown-header{role: 'presentation'}
-              =t 'tracks.show.menu_header'
-            %li#li_toggle_multi{role: 'presentation'}
-              %a#toggle_multi{role: 'menuitem', tabindex: '-1', href: '#'}
-                =t 'tracks.show.menu_sep'
-            %li#li_toggle_single{role: 'presentation'}
-              %a#toggle_single{role: 'menuitem', tabindex: '-1', href: '#'}
-                =t 'tracks.show.menu_one'
-            %li.dropdown-header{role: 'presentation'}
-              =t 'tracks.show.units_header'
-            %li#li_toggle_metric{role: 'presentation'}
-              %a#toggle_metric{role: 'menuitem', tabindex: '-1', href: '#'}
-                =t 'tracks.show.m_units_metric'
-            %li#li_toggle_imperial{role: 'presentation'}
-              %a#toggle_imperial{role: 'menuitem', tabindex: '-1', href: '#'}
-                =t 'tracks.show.m_units_imperial'
+        %button.btn.btn-default#set-weather-data
+          Weather data
+        %span.settings-button
+          - if action_name == 'show'
+            %button.btn.btn-default.dropdown-toggle#dropdownMenu1{type: 'button', data: {toggle: 'dropdown'}}
+              %i.fa.fa-cog
+            %ul.dropdown-menu.dropdown-menu-right{role: 'menu', aria: {labelledby: 'dropdownMenu1'}}
+              %li.dropdown-header{role: 'presentation'}
+                =t 'tracks.show.menu_header'
+              %li#li_toggle_multi{role: 'presentation'}
+                %a#toggle_multi{role: 'menuitem', tabindex: '-1', href: '#'}
+                  =t 'tracks.show.menu_sep'
+              %li#li_toggle_single{role: 'presentation'}
+                %a#toggle_single{role: 'menuitem', tabindex: '-1', href: '#'}
+                  =t 'tracks.show.menu_one'
+              %li.dropdown-header{role: 'presentation'}
+                =t 'tracks.show.units_header'
+              %li#li_toggle_metric{role: 'presentation'}
+                %a#toggle_metric{role: 'menuitem', tabindex: '-1', href: '#'}
+                  =t 'tracks.show.m_units_metric'
+              %li#li_toggle_imperial{role: 'presentation'}
+                %a#toggle_imperial{role: 'menuitem', tabindex: '-1', href: '#'}
+                  =t 'tracks.show.m_units_imperial'
         - if user_signed_in? && (current_user == track.user || (can? :update, :tracks))
           %a.btn.btn-default{href: edit_track_path(track)}
             %i.fa.fa-pencil
