--- a/app/assets/stylesheets/tracks/map.css
+++ b/app/assets/stylesheets/tracks/map.css
@@ -15,3 +15,14 @@
   width: 23%;
   z-index: 99;
 }
+
+#track-map-loading {
+  position: absolute;
+  width: 400px;
+  height: 100px;
+  left: 50%;
+  margin-left: -200px;
+  top: 50%;
+  margin-top: -100px;
+  z-index: 99;
+}
