--- a/app/assets/javascripts/app/templates/weather_datum_form.jst.ejs
+++ b/app/assets/javascripts/app/templates/weather_datum_form.jst.ejs
@@ -1,6 +1,6 @@
 <tr>
     <td>
-        <input class='form-control' name='weather_datum[actual_on]' placeholder="YYYY-MM-DD HH:mm"/>
+        <input class='form-control' name='weather_datum[actual_on]' placeholder="YYYY-MM-DD HH:mm" <% if (default_date) { %> value="<%=default_date%>" <% } %>/>
     </td>
     <td>
         <input class='form-control text-right' name='weather_datum[altitude]' />
