--- a/app/views/tracks/google_maps/index.html.haml
+++ b/app/views/tracks/google_maps/index.html.haml
@@ -8,10 +8,10 @@
       #track-map-wrapper.col-sm-12
         #track-map-loading.text-muted
           #track-map-loading-api.fa-2x
-            %i.fa.fa-spin.fa-circle-o-notch
+            %i.fa.fa-fw.fa-spin.fa-circle-o-notch
             Loading Google Maps API
           #track-map-loading-data.fa-2x
-            %i.fa.fa-spin.fa-circle-o-notch
+            %i.fa.fa-fw.fa-spin.fa-circle-o-notch
             Loading track data
         #track-map
         #track-map-polar-chart
