--- a/app/views/tournaments/competitors/show.html.erb
+++ b/app/views/tournaments/competitors/show.html.erb
@@ -15,5 +15,5 @@
   <%= @tournament_competitor.wingsuit_id %>
 </p>
 
-<%= link_to 'Edit', edit_tournament_competitor_path(@tournament_competitor) %> |
+<%= link_to 'Edit', edit_tournament_competitor_path(id: @tournament_competitor.id) %> |
 <%= link_to 'Back', tournament_competitors_path %>
