--- a/app/views/tournaments/competitors/edit.html.erb
+++ b/app/views/tournaments/competitors/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing Tournament Competitor</h1>
+<div class="container">
+  <h1>
+    <%= link_to @tournament.name, @tournament %>:
+    <%= link_to 'Competitors', tournament_competitors_path(tournament_id: @tournament.id) %>:
+    Editing
+  </h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Show', @tournament_competitor %> |
-<%= link_to 'Back', tournament_competitors_path %>
+  <%= link_to 'Show', @tournament_competitor %>
+</div>
