--- a/app/views/tournaments/competitors/index.html.erb
+++ b/app/views/tournaments/competitors/index.html.erb
@@ -1,31 +1,45 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <p id="notice"><%= notice %></p>
 
-<h1>Listing Tournament Competitors</h1>
+  <h1>
+    <%= link_to @tournament.name, @tournament %>
+    : Competitors
+  </h1>
 
-<table class="table table-bordered">
-  <thead>
-    <tr>
-      <th>Tournament</th>
-      <th>User profile</th>
-      <th>Wingsuit</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <div class="row">
+    <div class="col-sm-12">
+      <%= link_to 'Add competitor', new_tournament_competitor_path, class: "btn btn-default" %>
+    </div>
+  </div>
 
-  <tbody>
-    <% @competitors.each do |competitor| %>
-      <tr>
-        <td><%= competitor.tournament.name %></td>
-        <td><%= competitor.user_profile.name %></td>
-        <td><%= competitor.wingsuit.name %></td>
-        <td><%= link_to 'Show', tournament_competitor_path(id: competitor.id) %></td>
-        <td><%= link_to 'Edit', edit_tournament_competitor_path(id: competitor.id) %></td>
-        <td><%= link_to 'Destroy', tournament_competitor_path(id: competitor.id), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <div class="row top-buffer">
+    <div class="col-sm-12">
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Profile</th>
+            <th>Wingsuit</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
 
-<br>
+        <tbody>
+          <% line_no = 1 %>
+          <% @competitors.each do |competitor| %>
+            <tr>
+              <td><%= line_no %></td>
+              <td><%= competitor.user_profile.name %></td>
+              <td><%= competitor.wingsuit.name %></td>
+              <td><%= link_to 'Show', tournament_competitor_path(id: competitor.id) %></td>
+              <td><%= link_to 'Edit', edit_tournament_competitor_path(id: competitor.id) %></td>
+              <td><%= button_to 'Destroy', tournament_competitor_path(@tournament, competitor), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+            <% line_no += 1 %>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 
-<%= link_to 'New Tournament competitor', new_tournament_competitor_path %>
+</div>
