--- a/app/views/tournaments/_tournament.html.haml
+++ b/app/views/tournaments/_tournament.html.haml
@@ -21,5 +21,5 @@
     .comp-classes.text-muted
       Classes:
       Open -
-      = tournament.tournament_competitors.count
+      = tournament.competitors.count
       %i.fa.fa-user
